crates/tapir-script/compiler/src/snapshots/compiler__grammar_test__snapshot_failures@big_number.tapir.snap
---
source: crates/tapir-script/compiler/src/grammar_test.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/snapshot_tests/grammar/errors/big_number.tapir
---
Error: number too large to fit in target type
   ╭─[ big_number.tapir:1:9 ]
   │
 1 │ var x = 238472398472917948237;
   │         ──────────┬──────────  
   │                   ╰──────────── Invalid integer
   │ 
   │ Note: Larger than maximum positive number which is 2147483647
───╯
